--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,8 +1,14 @@
 body
 {
-    color: blueviolet;
+    color: rgb(7, 2, 12);
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
-
-
+}
+#container
+{
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 1px solid #ddd;
+    margin: 0 auto;
 }
