--- a/css/estilos.css
+++ b/css/estilos.css
@@ -12,3 +12,18 @@ body
     border: 1px solid #ddd;
     margin: 0 auto;
 }
+#cabecera
+{
+background: #33A;
+box-shadow: 0px 5px 30px 0px rgba(0,0,0,0.75);
+color:white;
+font-weight: bold;
+margin: 0;
+padding: 0.5em;
+}
+#cabecera #tagline
+{
+    margin:0 0 0 1em;
+    font-weight: normal;
+    font-size: 0.8em;
+}
