--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,8 +1,8 @@
 body
 {
-    color: blueviolet;
+    color: rgb(5, 0, 10);
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Courier New', Courier, monospace;
 
 
 }
